--- a/Next/simple-p/package.json
+++ b/Next/simple-p/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-nextjs-toast": "^1.2.5"
   },
   "devDependencies": {
     "eslint": "8.6.0",
